minio/minio-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-strip-ui
  namespace: s3
spec:
  stripPrefix:
    prefixes:
      - "/ui"
