minio/minio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio

---

apiVersion: v1
kind: Pod
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio-dev
spec:
  containers:
  - name: minio
    image: quay.io/minio/minio:RELEASE.2023-12-23T07-19-11Z
    command:
      - /bin/bash
      - -c
    args:
      - minio server /minio --address ":9090" --console-address ":9091"
    ports:
      - containerPort: 9090
      - containerPort: 9091
    volumeMounts:
      - name: minionfs
        mountPath: /minio
  volumes:
    - name: minionfs
      nfs:
        path: /srv/nfs/minio
        server: 192.168.99.108
