minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    name: minio
  ports:
    - name: api
      port: 9090
      targetPort: 9090
    - name: console
      port: 9091
      targetPort: 9091
  type: ClusterIP
