minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: traefik
  rules:
  - host: s3.gos.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9090
      - path: /ui/(.*)
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9091
